syntax = "proto3";

option go_package = "./message";

package message;

// protoc --proto_path=. --micro_out=. --go_out=. protos/*.proto

service User {
    rpc GetUserById (UserIdRequest) returns (UserIdReply) {}
}

message UserIdRequest {
    string uid = 1;
}

message UserIdReply {
    string uid = 1;
    string name = 2;
}